--- a/note/P01 认识复杂度和简单排序算法.md
+++ b/note/P01 认识复杂度和简单排序算法.md
@@ -87,8 +87,8 @@
 
 ## 问题
 
-qu1:存在一个整形数组Arry[N]，其中有一个数出现了奇数次，其他的数都出现了偶数次，求这个奇数。
-qu2:存在一个整形数组Arry[N]，其中有两个数出现了奇数次，其他的数都出现了偶数次，求这两个奇数。
-qu3:在一个有序数组中,判断某个值是否存在
-qu4:在一个有序数组中,找出大于某个值的最左侧位置
-qu5:在一个无序数组中，找出一个局部最小值
+1. qu1:存在一个整形数组Arry[N]，其中有一个数出现了奇数次，其他的数都出现了偶数次，求这个奇数。
+2. qu2:存在一个整形数组Arry[N]，其中有两个数出现了奇数次，其他的数都出现了偶数次，求这两个奇数。
+3. qu3:在一个有序数组中,判断某个值是否存在
+4. qu4:在一个有序数组中,找出大于某个值的最左侧位置
+5. qu5:在一个无序数组中，找出一个局部最小值
